<resources>
    <string name="placeholder">...</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="loading">Loading . . .</string>
    <string name="submit">Submit</string>
    <string name="quit">Quit</string>
    <string name="ver_info">ver. 0.10 (alpha)</string>
    <string name="app_name">Bromi</string>
    <string name="next">Next</string>
    <string name="sub_app_name">Challenge Your Language Skills!</string>
    <string name="tap_here">Tap here to start!</string>
    <string name="log_in">Log In</string>
    <string name="create_profile">Create Profile</string>
    <string name="create_profile_welcome_text">Welcome to Bromi! Before you get started with the game, you must create a user profile where we will keep track of your progress and valuable achievements you have gained throughout your practice!</string>
    <string name="create_profile_welcome_text2">Just answer the following questions and you are good to go! (Note that you can not change the data you have entered afterwards.)</string>
    <string name="create_profile_welcome_text3">If you already have a profile, you can use the following step to delete it and create a new one. Only one profile can be created at a time!</string>
    <string name="name_question">What would you like to be called?</string>
    <string name="country_question">What country are you from?</string>
    <string name="gender_question">What gender are you?</string>
    <string name="dialog_delete_profile">It was detected that a profile already exists. Do you want to delete it? (All progress and data will be lost.)</string>
    <string name="dialog_create_profile">Could not find Profile. Would you like to create one now?</string>
    <string name="choose">Choose...</string>
    <string name="practice_button_text">Practice</string>
    <string name="challenge_button_text">Challenge\n(Coming soon)</string>
    <string name="endless_button_text">Endless\n(Coming soon)</string>
    <string name="GER">German (Deutsch)</string>
    <string name="TRK">Turkish (Türkçe)</string>
    <string name="FR">French (Français)</string>
    <string name="SPN">Spanish (Español)</string>
    <string name="ENG">English</string>
    <string name="RUS">Russian (русский язык)</string>
    <string name="CHNs">Chinese (Simpl.) (汉语)</string>
    <string name="CHNt">Chinese (Trad.) (漢語)</string>
    <string name="JPN">Japanese (日本語)</string>
    <string name="KOR">Korean (한국어)</string>
    <string name="selected_mode">Practice: </string>
    <string name="selected_language">Selected Language</string>
    <string name="level_1">1</string>
    <string name="level_2">2</string>
    <string name="level_3">3</string>
    <string name="level_4">4</string>
    <string name="level_5">5</string>
    <string name="level_6">6</string>
    <string name="level_7">7</string>
    <string name="level_8">8</string>
    <string name="level_exam">Exam</string>
    <string name="current_vocabulary">None</string>
    <string name="answer_possibility_1">Answer 1</string>
    <string name="answer_possibility_2">Answer 2</string>
    <string name="answer_possibility_3">Answer 3</string>
    <string name="answer_possibility_4">Answer 4</string>
    <string name="level_indicator_text"> [Lvl.1]</string>
    <string name="level_progress_indicator">0/0</string>
    <string name="level_results_text">Level_results_text</string>
    <string name="level_passed">Level Passed!!</string>
    <string name="level_failed">Level Failed..</string>
    <string name="exp_gained_text">0 EXP gained!!</string>
    <string name="next_level"> </string>
    <string name="level_select"> </string>
    <string name="redo"> </string>
    <string name="profile">Profile</string>
    <string name="vocabulary_answered_caption">Vocab. Answered: </string>
    <string name="levels_played_caption">Levels Played: </string>
    <string name="wrong_vocabularies_caption">Vocab. Wrong: </string>
    <string name="correct_vocabularies_caption">Vocab. Correct: </string>
    <string name="vocabulary_answered"> </string>
    <string name="levels_played"> </string>
    <string name="wrong_vocabularies"> </string>
    <string name="correct_vocabularies"> </string>
    <string name="user_name">Trirongone</string>
    <string name="user_experience">EXP Gained: </string>
    <string name="current_exp">1000</string>
    <string name="user_level">Lvl. 0</string>
    <string name="level_up_requirement">/500</string>
    <string name="xp"> EXP</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
</resources>