<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bromi.Activities.PracticeLevelActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/selected_mode"
        android:id="@+id/textView8"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/selected_language"
        android:id="@+id/language_view"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView8"
        android:layout_toEndOf="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/level_indicator_text"
        android:id="@+id/level_indicator_text"
        android:layout_above="@+id/imageView"
        android:layout_toRightOf="@+id/language_view"
        android:layout_toEndOf="@+id/language_view" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_below="@+id/textView8"
        android:src="@drawable/bold_separator"
        android:adjustViewBounds="true"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/current_vocabulary"
        android:id="@+id/current_vocabulary"
        android:textSize="60sp"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="90dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <!--
        1   2
        3   4
     -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_possibility_1"
        android:id="@+id/answer_possibility_1"
        android:layout_below="@+id/current_vocabulary"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/answer_button_normal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_possibility_2"
        android:id="@+id/answer_possibility_2"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_alignBottom="@+id/answer_possibility_1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/answer_button_normal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_possibility_3"
        android:id="@+id/answer_possibility_3"
        android:layout_below="@+id/answer_possibility_1"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/answer_button_normal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_possibility_4"
        android:id="@+id/answer_possibility_4"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_alignBottom="@+id/answer_possibility_3"
        android:layout_alignRight="@+id/answer_possibility_2"
        android:layout_alignEnd="@+id/answer_possibility_2"
        android:background="@drawable/answer_button_normal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:id="@+id/button"
        android:textAllCaps="false"
        android:drawableLeft="@drawable/ic_cancel_black_24dp"
        android:drawablePadding="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="returnToLevelSelectScreen" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/level_progress_indicator"
        android:id="@+id/level_progress_indicator"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
