<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bromi.Activities.PracticeLevelSelectActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/selected_mode"
        android:id="@+id/textView8"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/selected_language"
        android:id="@+id/language_view"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView8"
        android:layout_toEndOf="@+id/textView8" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_below="@+id/textView8"
        android:src="@drawable/bold_separator"
        android:adjustViewBounds="true"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/level_1"
        android:id="@+id/level_1"
        android:textSize="30sp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/level_select_unlocked"
        android:onClick="startLevelClicked" />

    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/level_2"
        android:id="@+id/level_2"
        android:textSize="30sp"
        android:background="@drawable/level_select_unlocked"
        android:layout_alignTop="@+id/level_1"
        android:layout_toRightOf="@+id/level_1"
        android:layout_toEndOf="@+id/level_1"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:onClick="startLevelClicked" />

    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/level_3"
        android:id="@+id/level_3"
        android:textSize="30sp"
        android:background="@drawable/level_select_unlocked"
        android:layout_alignTop="@+id/level_2"
        android:layout_toRightOf="@+id/level_2"
        android:layout_toEndOf="@+id/level_2"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:onClick="startLevelClicked" />

    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/level_4"
        android:id="@+id/level_4"
        android:textSize="30sp"
        android:background="@drawable/level_select_unlocked"
        android:layout_alignTop="@+id/level_3"
        android:layout_toRightOf="@+id/level_3"
        android:layout_toEndOf="@+id/level_3"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:onClick="startLevelClicked" />

    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/level_5"
        android:id="@+id/level_5"
        android:textSize="30sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/level_select_unlocked"
        android:layout_below="@+id/level_1"
        android:onClick="startLevelClicked" />

    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/level_6"
        android:id="@+id/level_6"
        android:textSize="30sp"
        android:background="@drawable/level_select_unlocked"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/level_1"
        android:layout_alignTop="@+id/level_5"
        android:layout_toRightOf="@+id/level_5"
        android:layout_toEndOf="@+id/level_5"
        android:onClick="startLevelClicked" />

    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/level_7"
        android:id="@+id/level_7"
        android:textSize="30sp"
        android:background="@drawable/level_select_unlocked"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/level_1"
        android:layout_alignTop="@+id/level_6"
        android:layout_toRightOf="@+id/level_6"
        android:layout_toEndOf="@+id/level_6"
        android:onClick="startLevelClicked" />

    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/level_8"
        android:id="@+id/level_8"
        android:textSize="30sp"
        android:background="@drawable/level_select_unlocked"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/level_1"
        android:layout_alignTop="@+id/level_7"
        android:layout_toRightOf="@+id/level_7"
        android:layout_toEndOf="@+id/level_7"
        android:onClick="startLevelClicked" />

    <Button
        android:layout_width="220dp"
        android:layout_height="80dp"
        android:text="@string/level_exam"
        android:id="@+id/level_exam"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:background="@drawable/exam_select_unlocked"
        android:layout_below="@+id/level_6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="startLevelClicked" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/bold_separator"
        android:adjustViewBounds="true"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/level_exam" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:src="@drawable/bold_separator"
        android:adjustViewBounds="true"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:textAllCaps="false"
        android:drawableLeft="@drawable/ic_cancel_black_24dp"
        android:drawableStart="@drawable/ic_cancel_black_24dp"
        android:drawablePadding="5dp"
        android:id="@+id/quitButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView4"
        android:onClick="returnToLanguageSelect" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/user_name"
        android:id="@+id/user_name"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/user_avatar_clickable" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_avatar_clickable"
        android:adjustViewBounds="true"
        android:minHeight="50sp"
        android:minWidth="50sp"
        android:maxHeight="50sp"
        android:maxWidth="50sp"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/imageView2"
        android:src="@drawable/default_avatar"
        android:layout_centerHorizontal="true"
        android:clickable="true" />

</RelativeLayout>
